--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   <script src="test/lib/mocha/mocha.js"></script>
   <script>mocha.setup('bdd')</script>
   <script src="test/lib/expect/index.js"></script>
-  <script src="src/js-fundamentals.js"></script>
   <script src="test/lib/lodash/lodash.js"></script>
+  <!-- <script src="challenges/*.js"></script> -->
+  <script src="challenges/fizzbuzz.js"></script>
+  <script src="challenges/draw-stairs.js"></script>
   <script src="test/index.js"></script>
   <script>
     mocha.globals();
