submission and added passing test cases

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <!-- <script src="challenges/*.js"></script> -->
   <script src="challenges/fizzbuzz.js"></script>
   <script src="challenges/draw-stairs.js"></script>
+  <script src="challenges/mode-mean.js"></script>
   <script src="test/index.js"></script>
   <script>
     mocha.globals();
