--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script src="challenges/fizzbuzz.js"></script>
   <script src="challenges/draw-stairs.js"></script>
   <script src="challenges/mode-mean.js"></script>
+  <script src="challenges/kth-to-last-node.js"></script>
   <script src="test/index.js"></script>
   <script>
     mocha.globals();
