submission, test-cases in test.js I created don't work properly, but it works as expected in Developer Console for pow. @todo maybe

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script src="challenges/draw-stairs.js"></script>
   <script src="challenges/mode-mean.js"></script>
   <script src="challenges/kth-to-last-node.js"></script>
+  <script src="challenges/pow.js"></script>
   <script src="test/index.js"></script>
   <script>
     mocha.globals();
