--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="challenges/mode-mean.js"></script>
   <script src="challenges/kth-to-last-node.js"></script>
   <script src="challenges/pow.js"></script>
+  <script src="challenges/reverse-in-place.js"></script>
   <script src="test/index.js"></script>
   <script>
     mocha.globals();
