--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <script src="challenges/kth-to-last-node.js"></script>
   <script src="challenges/pow.js"></script>
   <script src="challenges/reverse-in-place.js"></script>
+  <script src="challenges/balanced-parens.js"></script>
   <script src="test/index.js"></script>
   <script>
     mocha.globals();
