subset-sum submission

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <script src="challenges/pow.js"></script>
   <script src="challenges/reverse-in-place.js"></script>
   <script src="challenges/balanced-parens.js"></script>
+  <script src="challenges/subset-sum.js"></script>
   <script src="test/index.js"></script>
   <script>
     mocha.globals();
