binToDec easy, decToBin not finished

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <script src="challenges/reverse-in-place.js"></script>
   <script src="challenges/balanced-parens.js"></script>
   <script src="challenges/subset-sum.js"></script>
+  <script src="challenges/bin-to-dec.js"></script>
   <script src="test/index.js"></script>
   <script>
     mocha.globals();
